--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,25 +1,21 @@
 ---
 title: Introduction
-description: 'Welcome to your new Mintlify documentation. Get started making it yours.'
+description: "Uploadfly makes it easy for developers to add file uploads to their applications."
 ---
 
-## Setting up
+## Quickstart
 
-The first step to world-class documentation is setting up your editing environnments.
+Learn how to use Uploadfly in your projects.
 
 <CardGroup cols={2}>
   <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
+    title="Creating a fly"
+    icon="rocket"
+    href="/api-reference/creating-a-fly"
   >
-    Get your docs set up locally for easy development.
+    Your first step to integrating Uploadfly in your project.
   </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
+  <Card title="Authentication" icon="key" href="api-reference/authentication">
     Preview your changes before you push to make sure they're perfect.
   </Card>
 </CardGroup>
