changed card links, icons and descriptions

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -16,30 +16,26 @@ Learn how to use Uploadfly in your projects.
     Your first step to integrating Uploadfly in your project.
   </Card>
   <Card title="Authentication" icon="key" href="api-reference/authentication">
-    Preview your changes before you push to make sure they're perfect.
+    Securely managing access to Uploadfly API endpoints.
   </Card>
 </CardGroup>
 
-## Make it yours
+## API Endpoints
 
-Update your docs to your brand and add valuable content for the best user conversion.
+Accessing and interacting with Uploadfly's file upload infrastructure through intuitive API endpoints.
 
 <CardGroup cols={2}>
   <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
-  >
-    Customize your docs to your company's colors and brands.
-  </Card>
+    title="Upload a file"
+    icon="upload"
+    href="/api-reference/endpoint/upload"
+  />
   <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
-  >
-    Automatically generate endpoints from an OpenAPI spec.
-  </Card>
-  <Card
+    title="Delete a file"
+    icon="trash"
+    href="/api-reference/endpoint/delete"
+  />
+  {/* <Card
     title="Add Components"
     icon="screwdriver-wrench"
     href="https://mintlify.com/docs/components/accordion"
@@ -52,5 +48,5 @@ Update your docs to your brand and add valuable content for the best user conver
     href="https://mintlify.com/showcase"
   >
     Check out our showcase of our favorite documentation.
-  </Card>
+  </Card> */}
 </CardGroup>
