--- a/api-reference/endpoint/delete.mdx
+++ b/api-reference/endpoint/delete.mdx
@@ -19,14 +19,103 @@ description: "This endpoint deletes a single file."
 
 <RequestExample>
 
-```bash Example Request
-curl --location --request DELETE 'https://api.mintlify.com/api/user' \
---header 'Content-Type: application/json' \
---header 'Authorization: Token <token>' \
---data-raw '{
-		"user_group_id": "example_1"
-		"current_token": "abcdef"
-}'
+```javascript JavaScript (fetch)
+fetch("https://api.uploadfly.cloud/delete", {
+  method: "DELETE",
+  headers: {
+    Authorization: "Bearer SECRET_KEY",
+  },
+  body: {
+    file_url: "cdn.uploadfly.cloud/xrwbua/example.png",
+  },
+});
+```
+
+```go Go
+package main
+
+import (
+	"bytes"
+	"net/http"
+)
+
+func main() {
+	url := "https://api.uploadfly.cloud/delete"
+	data := []byte(`{"file_url": "cdn.uploadfly.cloud/xrwbua/example.png"}`)
+
+	req, err := http.NewRequest("DELETE", url, bytes.NewBuffer(data))
+	if err != nil {
+		// Handle error
+	}
+
+	req.Header.Set("Authorization", "Bearer SECRET_KEY")
+
+	client := &http.Client{}
+	resp, err := client.Do(req)
+	if err != nil {
+		// Handle error
+	}
+
+	defer resp.Body.Close()
+}
+
+```
+
+```rust Rust
+use reqwest::blocking::Client;
+use std::collections::HashMap;
+
+fn main() -> Result<(), reqwest::Error> {
+    let client = Client::new();
+    let url = "https://api.uploadfly.cloud/delete";
+
+    let mut headers = HashMap::new();
+    headers.insert("Authorization", "Bearer SECRET_KEY");
+
+    let mut body = HashMap::new();
+    body.insert("file_url", "cdn.uploadfly.cloud/xrwbua/example.png");
+
+    let response = client
+        .delete(url)
+        .headers(headers)
+        .json(&body)
+        .send()?;
+
+    // Handle response
+
+    Ok(())
+}
+```
+
+```php PHP
+<?php
+$ch = curl_init();
+
+curl_setopt($ch, CURLOPT_URL, "https://api.uploadfly.cloud/delete");
+curl_setopt($ch, CURLOPT_CUSTOMREQUEST, "DELETE");
+curl_setopt($ch, CURLOPT_HTTPHEADER, array(
+    "Authorization: Bearer SECRET_KEY"
+));
+curl_setopt($ch, CURLOPT_POSTFIELDS, array(
+    "file_url" => "cdn.uploadfly.cloud/xrwbua/example.png"
+));
+
+$response = curl_exec($ch);
+
+curl_close($ch);
+?>
+```
+
+```javascript JavaScript (axios)
+axios.delete("https://api.uploadfly.cloud/delete", {
+  method: "DELETE",
+  headers: {
+    Authorization: "Bearer SECRET_KEY",
+  },
+  body: {
+    file_url: "cdn.uploadfly.cloud/xrwbua/example.png",
+  },
+});
 ```
 
 </RequestExample>
