--- a/api-reference/creating-a-fly.mdx
+++ b/api-reference/creating-a-fly.mdx
@@ -1,4 +1,8 @@
 ---
 title: "Creating a fly"
-description: "Example overview page before API endpoints"
+description: "Your first step to integrating Uploadfly in your project."
 ---
+
+A fly is a file storage container designed to simplify the process of handling and managing uploaded files within your application or project. It serves as a centralized repository where you can securely store and get insights on files uploaded by users.
+
+[Click here](https://beta.uploadfly.cloud/launch) to create a fly.
