updated card links

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -8,14 +8,10 @@ description: "Uploadfly makes it easy for developers to add file uploads to thei
 Learn how to use Uploadfly in your projects.
 
 <CardGroup cols={2}>
-  <Card
-    title="Creating a fly"
-    icon="rocket"
-    href="/api-reference/creating-a-fly"
-  >
+  <Card title="Creating a fly" icon="rocket" href="/quickstart/creating-a-fly">
     Your first step to integrating Uploadfly in your project.
   </Card>
-  <Card title="Authentication" icon="key" href="api-reference/authentication">
+  <Card title="Authentication" icon="key" href="quickstart/authentication">
     Securely managing access to Uploadfly API endpoints.
   </Card>
 </CardGroup>
