--- a/_snippets/response.mdx
+++ b/_snippets/response.mdx
@@ -16,6 +16,7 @@
 - **200**: The request was successful.
 - **400**: The request was invalid or malformed.
 - **401**: Authentication or authorization failed.
+- **403**: The request is not allowed.
 - **404**: The requested resource was not found.
 - **500**: An internal server error occurred.
 
