changed example response

--- a/api-reference/endpoint/upload.mdx
+++ b/api-reference/endpoint/upload.mdx
@@ -72,15 +72,13 @@ curl --location --request POST 'https://api.mintlify.com/api/user' \
 
 <ResponseExample>
 
-```json Response
+```json Example Response
 {
-  "success": 1,
-  "user_group": {
-    "team_id": 3,
-    "token": "<user_group_token_to_auth_dashboard>",
-    "name": "Example 1",
-    "provided_id": "example_1"
-  }
+  "url": "https://cdn.uploadfly.cloud/loUvT2/example-uwAyQV.png",
+  "path": "loUvT2/example-uwAyQV.png",
+  "type": "image/png",
+  "size": "8.96 kB",
+  "name": "example-uwAyQV"
 }
 ```
 
