--- a/_snippets/response.mdx
+++ b/_snippets/response.mdx
@@ -5,8 +5,8 @@
   call's outcome.
 </ResponseField>
 
-<ResponseField name="success" type="number">
-  Indicates whether the call was successful. 1 if successful, 0 if not.
+<ResponseField name="success" type="boolean">
+  Indicates whether the call was successful. true if successful, false if not.
 </ResponseField>
 
 <ResponseField name="status" type="number">
