--- a/upload-widget/react.mdx
+++ b/upload-widget/react.mdx
@@ -23,7 +23,7 @@ Import the `UfWidget` component and use it within your React application:
 
 ```jsx
 import React from "react";
-import UfWidget from "@uploadfly/react-widget";
+import {UfWidget} from "@uploadfly/react-widget";
 import "@uploadfly/react-widget/dist/style.css";
 
 function App() {
