--- a/upload-widget/react.mdx
+++ b/upload-widget/react.mdx
@@ -47,7 +47,7 @@ export default App;
 
 The `UfWidget` component accepts the following props:
 
-- `apiKey` (string, required): Your API key for accessing the file upload service.
+- `apiKey` (string, required): Your API key for accessing Uploadfly services.
 - `hideAttribution` (boolean, optional): If set to `true`, hides the attribution link.
 - `onUploadComplete` (function, optional): A callback function that receives upload completion data.
 - `accentColor` (string, optional): Custom accent color for styling the widget (default is `#f35815`).
