--- a/upload-widget/react.mdx
+++ b/upload-widget/react.mdx
@@ -31,7 +31,7 @@ function App() {
 
   return (
     <div>
-      <h1>File Upload Widget</h1>
+      <h1>React File Upload Widget</h1>
       <UfWidget apiKey="YOUR_API_KEY">
         {/* Content that triggers the modal */}
         <button>Upload a file</button>
