--- a/upload-widget/react.mdx
+++ b/upload-widget/react.mdx
@@ -14,7 +14,7 @@
 To use the `UfWidget` component in your React application, run the following command:
 
 ```bash
-npm install i @uploadfly/react-widget
+npm i @uploadfly/react-widget
 ```
 
 ## Usage
