--- a/upload-widget/react.mdx
+++ b/upload-widget/react.mdx
@@ -27,7 +27,7 @@ import { UfWidget } from "@uploadfly/react-widget";
 import "@uploadfly/react-widget/dist/style.css";
 
 function App() {
-  // Your component code here
+  // Your component code
 
   return (
     <div>
