--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,24 +1,24 @@
 ---
 title: Introduction
-description: "Uploadfly makes it easy for developers to add file uploads to their applications."
+description: "UploadFly makes it easy for developers to add file uploads to their applications."
 ---
 
 ## Quickstart
 
-Learn how to use Uploadfly in your projects.
+Learn how to use UploadFly in your projects.
 
 <CardGroup cols={2}>
   <Card title="Creating a fly" icon="rocket" href="/quickstart/creating-a-fly">
-    Your first step to integrating Uploadfly in your project.
+    Your first step to integrating UploadFly in your project.
   </Card>
   <Card title="Authentication" icon="key" href="quickstart/authentication">
-    Securely managing access to Uploadfly API endpoints.
+    Securely managing access to UploadFly API endpoints.
   </Card>
 </CardGroup>
 
 ## API Endpoints
 
-Accessing and interacting with Uploadfly's file upload infrastructure through intuitive API endpoints.
+Accessing and interacting with UploadFly's file upload infrastructure through intuitive API endpoints.
 
 <CardGroup cols={2}>
   <Card
