--- a/upload-widget/react.mdx
+++ b/upload-widget/react.mdx
@@ -44,7 +44,7 @@ export default App;
 
 The `UfWidget` component accepts the following props:
 
-- `apiKey` (string, required): Your UploadFly API key. Preferably, a [upload access](/quickstart/authentication#1-upload-access) key.
+- `apiKey` (string, required): Your UploadFly API key. Preferably an [upload access](/quickstart/authentication#1-upload-access) key.
 - `filename` (string, optional): The name of the file to be uploaded.
 - `maxFileSize` (string, optional): The maximum allowed file size for upload, specified as a string (e.g., "6.9MB").
 - `allowedFileTypes` (array of strings, optional): An array of allowed file types for upload (e.g., ["jpeg", "png"]).
