--- a/quickstart/creating-a-fly.mdx
+++ b/quickstart/creating-a-fly.mdx
@@ -1,8 +1,8 @@
 ---
-title: "Creating a fly"
-description: "Your first step to integrating Uploadfly in your project."
+title: "Creating a project"
+description: "Your first step to integrating UploadFly in your application."
 ---
 
-A fly is a file storage container designed to simplify the process of handling and managing uploaded files within your application or project. It serves as a centralized repository where you can securely store and get insights on files uploaded by users.
+A project is a file storage container designed to simplify the process of handling and managing uploaded files within your application. It serves as a centralized repository where you can securely store and get insights on files uploaded by users.
 
-[Click here](https://beta.uploadfly.cloud/launch) to create a fly.
+[Click here](https://beta.uploadfly.cloud/launch) to create a project.
