--- a/quickstart/creating-a-fly.mdx
+++ b/quickstart/creating-a-fly.mdx
@@ -5,4 +5,4 @@ description: "Your first step to integrating UploadFly in your application."
 
 A project is a file storage container designed to simplify the process of handling and managing uploaded files within your application. It serves as a centralized repository where you can securely store and get insights on files uploaded by users.
 
-[Click here](https://beta.uploadfly.cloud/launch) to create a project.
+[Click here](https://beta.uploadfly.co/launch) to create a project.
