feat: updated domain

--- a/quickstart/authentication.mdx
+++ b/quickstart/authentication.mdx
@@ -1,9 +1,9 @@
 ---
 title: "Authentication"
-description: "Securely managing access to Uploadfly API endpoints."
+description: "Securely managing access to UploadFly API endpoints."
 ---
 
-In order to interact with Uploadfly's API endpoints, you'll need to authenticate your requests using an API key. API keys grant access to the services and functionalities provided by Uploadfly. There are two types of access levels associated with an API key: **"upload access"** and **"full access"**. Each access level has different permissions and restrictions, allowing you to choose the appropriate level of access based on your requirements.
+In order to interact with UploadFly's API endpoints, you'll need to authenticate your requests using an API key. API keys grant access to the services and functionalities provided by UploadFly. There are two types of access levels associated with an API key: **"upload access"** and **"full access"**. Each access level has different permissions and restrictions, allowing you to choose the appropriate level of access based on your requirements.
 
 ## API Key Access Levels
 
